[gd_scene load_steps=62 format=3 uid="uid://ddpam21pf6tc8"]

[ext_resource type="Script" path="res://Enemy/Scripts/enemy.gd" id="1_11i0w"]
[ext_resource type="Texture2D" uid="uid://frtl2a4bro6g" path="res://Enemy/Sprites/enemy.png" id="2_0bbyr"]
[ext_resource type="Script" path="res://StateMachine/StateMachine.gd" id="3_05tt3"]
[ext_resource type="Script" path="res://Enemy/Scripts/States/IdleState.gd" id="4_bb2kd"]
[ext_resource type="Script" path="res://Enemy/Scripts/HitBox.gd" id="4_geuxi"]
[ext_resource type="Script" path="res://Enemy/Scripts/States/AttackState.gd" id="6_l1u2y"]
[ext_resource type="Script" path="res://Enemy/Scripts/States/DeathState.gd" id="7_85dkp"]
[ext_resource type="Script" path="res://Enemy/Scripts/States/ChasingState.gd" id="7_tgy8f"]
[ext_resource type="Script" path="res://Enemy/Scripts/DangerZone.gd" id="9_54ahb"]
[ext_resource type="Script" path="res://Enemy/Scripts/States/HurtState.gd" id="9_wkqde"]
[ext_resource type="Script" path="res://Enemy/Scripts/States/DetectionState.gd" id="10_87lnc"]
[ext_resource type="Script" path="res://Enemy/Scripts/Back.gd" id="12_sfngl"]
[ext_resource type="Script" path="res://Enemy/Scripts/Fov.gd" id="13_0620i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5vvyq"]
atlas = ExtResource("2_0bbyr")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vawu1"]
atlas = ExtResource("2_0bbyr")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_31tq4"]
atlas = ExtResource("2_0bbyr")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2011"]
atlas = ExtResource("2_0bbyr")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_edjkl"]
atlas = ExtResource("2_0bbyr")
region = Rect2(192, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5aex"]
atlas = ExtResource("2_0bbyr")
region = Rect2(240, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4im6i"]
atlas = ExtResource("2_0bbyr")
region = Rect2(288, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7u80y"]
atlas = ExtResource("2_0bbyr")
region = Rect2(336, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_36xor"]
atlas = ExtResource("2_0bbyr")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3jnc"]
atlas = ExtResource("2_0bbyr")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7kvw1"]
atlas = ExtResource("2_0bbyr")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_chq4n"]
atlas = ExtResource("2_0bbyr")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kojtv"]
atlas = ExtResource("2_0bbyr")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ed6li"]
atlas = ExtResource("2_0bbyr")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7da6u"]
atlas = ExtResource("2_0bbyr")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2yhf"]
atlas = ExtResource("2_0bbyr")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvdpe"]
atlas = ExtResource("2_0bbyr")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kmkw"]
atlas = ExtResource("2_0bbyr")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmebd"]
atlas = ExtResource("2_0bbyr")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_krft4"]
atlas = ExtResource("2_0bbyr")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2math"]
atlas = ExtResource("2_0bbyr")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0dt5"]
atlas = ExtResource("2_0bbyr")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bms0"]
atlas = ExtResource("2_0bbyr")
region = Rect2(288, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_phxju"]
atlas = ExtResource("2_0bbyr")
region = Rect2(336, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u33e2"]
atlas = ExtResource("2_0bbyr")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kaw0"]
atlas = ExtResource("2_0bbyr")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba8yy"]
atlas = ExtResource("2_0bbyr")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ux5n8"]
atlas = ExtResource("2_0bbyr")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_231hg"]
atlas = ExtResource("2_0bbyr")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu6ua"]
atlas = ExtResource("2_0bbyr")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gahxb"]
atlas = ExtResource("2_0bbyr")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dwcu"]
atlas = ExtResource("2_0bbyr")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3aqk6"]
atlas = ExtResource("2_0bbyr")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yx362"]
atlas = ExtResource("2_0bbyr")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oomkh"]
atlas = ExtResource("2_0bbyr")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ly8t"]
atlas = ExtResource("2_0bbyr")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wffng"]
atlas = ExtResource("2_0bbyr")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_af6y8"]
atlas = ExtResource("2_0bbyr")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsno7"]
atlas = ExtResource("2_0bbyr")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ilil"]
atlas = ExtResource("2_0bbyr")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0s1g"]
atlas = ExtResource("2_0bbyr")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n72c2"]
atlas = ExtResource("2_0bbyr")
region = Rect2(288, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqyeo"]
atlas = ExtResource("2_0bbyr")
region = Rect2(336, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_t6vvh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vvyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vawu1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31tq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2011")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edjkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5aex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4im6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7u80y")
}],
"loop": false,
"name": &"death",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_36xor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3jnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7kvw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chq4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kojtv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ed6li")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7da6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2yhf")
}],
"loop": false,
"name": &"detect",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvdpe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kmkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmebd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krft4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2math")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0dt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bms0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phxju")
}],
"loop": false,
"name": &"hit",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u33e2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kaw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba8yy")
}],
"loop": false,
"name": &"hurt",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ux5n8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_231hg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu6ua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gahxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dwcu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3aqk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yx362")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oomkh")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ly8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wffng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_af6y8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsno7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ilil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0s1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n72c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqyeo")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_73j3u"]
radius = 4.0
height = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8rtxx"]
size = Vector2(5.00184, 15.8824)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0p5dr"]
radius = 5.0
height = 16.0

[sub_resource type="GDScript" id="GDScript_5if1h"]
script/source = "extends Label

@onready var parent = get_parent()

func _process(_delta):
	if parent.target is Player:
		text = \"!\"
	else:
		text = \"\"
"

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
process_mode = 1
collision_layer = 8
collision_mask = 5
script = ExtResource("1_11i0w")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_t6vvh")
animation = &"hit"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.76471, 0)
shape = SubResource("CapsuleShape2D_73j3u")

[node name="DangerZone" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
script = ExtResource("9_54ahb")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DangerZone"]
shape = SubResource("RectangleShape2D_8rtxx")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
script = ExtResource("4_geuxi")
metadata/_edit_group_ = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CapsuleShape2D_73j3u")
debug_color = Color(0.843137, 0.360784, 0.333333, 0.419608)

[node name="WallRayCast" type="RayCast2D" parent="."]
position = Vector2(0, -8.2353)
scale = Vector2(0.5, 0.5)
target_position = Vector2(-15, 0)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_05tt3")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("parent")]
script = ExtResource("4_bb2kd")
parent = NodePath("../..")

[node name="Chasing" type="Node" parent="StateMachine" node_paths=PackedStringArray("parent")]
script = ExtResource("7_tgy8f")
parent = NodePath("../..")

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("parent")]
script = ExtResource("6_l1u2y")
parent = NodePath("../..")

[node name="Death" type="Node" parent="StateMachine" node_paths=PackedStringArray("parent")]
script = ExtResource("7_85dkp")
parent = NodePath("../..")

[node name="Hurt" type="Node" parent="StateMachine" node_paths=PackedStringArray("parent")]
script = ExtResource("9_wkqde")
parent = NodePath("../..")

[node name="Detection" type="Node" parent="StateMachine" node_paths=PackedStringArray("parent")]
script = ExtResource("10_87lnc")
parent = NodePath("../..")

[node name="Back" type="Area2D" parent="."]
position = Vector2(11, 0)
collision_layer = 8
collision_mask = 4
script = ExtResource("12_sfngl")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Back"]
shape = SubResource("CapsuleShape2D_0p5dr")
debug_color = Color(0, 0.627451, 0.486275, 0.419608)

[node name="Fov" type="RayCast2D" parent="."]
target_position = Vector2(-75, 0)
collision_mask = 5
script = ExtResource("13_0620i")

[node name="Label" type="Label" parent="."]
offset_left = -1.0
offset_top = -31.0
offset_right = 4.0
offset_bottom = -8.0
theme_override_font_sizes/font_size = 0
script = SubResource("GDScript_5if1h")

[connection signal="died" from="." to="StateMachine/Idle" method="_on_enemy_died"]
[connection signal="died" from="." to="StateMachine/Chasing" method="_on_died"]
[connection signal="died" from="." to="StateMachine/Attack" method="_on_died"]
[connection signal="died" from="." to="StateMachine/Hurt" method="_on_died"]
[connection signal="hurt" from="." to="StateMachine/Chasing" method="_on_hurt"]
[connection signal="hurt" from="." to="StateMachine/Attack" method="_on_hurt"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="StateMachine/Death" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="StateMachine/Hurt" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="StateMachine/Detection" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="StateMachine/Attack" method="_on_frame_changed"]
[connection signal="body_entered" from="DangerZone" to="DangerZone" method="_on_body_entered"]
[connection signal="body_exited" from="DangerZone" to="DangerZone" method="_on_body_exited"]
[connection signal="area_entered" from="HitBox" to="HitBox" method="_on_area_entered"]
[connection signal="body_entered" from="Back" to="Back" method="_on_body_entered"]
[connection signal="body_exited" from="Back" to="Back" method="_on_body_exited"]
